--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,61 @@
   <title>Four Card Feature Section</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
-  
+
+  <div class="container">
+    
+    <header>
+
+      <h1 class="light">Reliable, efficient delivery</h1>
+
+      <h1>Powered by Technology</h1>
+
+      <p>Our Artificial intelligence powered tools use millions of project data points to ensure that your project is
+        successful</p>
+
+
+    </header>
+
+    <div class="cards grid">
+
+      <div class="card" id="test">
+
+        <h3>Supervisor</h3>
+        <p>Monitors activity to identify project roadblocks</p>
+        <img src="images/icon-supervisor.svg" alt="Search icon with eye inside it">
+
+      </div>
+      <div class="card">
+
+        <h3>Team Builder</h3>
+        <p>Scans our talet network to create the optimal team for your project</p>
+        <img src="images/icon-team-builder.svg" alt="website template with small house infront of it">
+
+
+      </div>
+
+      <div class="card">
+
+        <h3>Calculator</h3>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="images/icon-calculator.svg" alt="A computer with statistics in the screen">
+
+      </div>
+
+      <div class="card">
+
+        <h3>Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="images/icon-karma.svg" alt="A lightened lamp">
+
+      </div>
+
+    </div>
+
+  </div>
 
 </body>
+
 </html>
