--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
     <div class="cards grid">
 
-      <div class="card" id="test">
+      <div class="card">
 
         <h3>Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p>
         <img src="images/icon-supervisor.svg" alt="Search icon with eye inside it">
 
       </div>
+      
       <div class="card">
 
         <h3>Team Builder</h3>
